<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">共享车位</string>
    <string name="title_main">高德定位SDK功能展示</string>

    <string name="title_location">获取定位数据</string>
    <string name="location">获取定位数据</string>
    <string name="location_dec">调用定位接口获取定位数据</string>

    <string name="title_geoFence">地理围栏</string>
    <string name="geoFence">地理围栏</string>
    <string name="geoFence_dec">展示地理围栏功能</string>

    <string name="roundGeoFence">圆形地理围栏</string>
    <string name="roundGeoFence_dec">展示圆形地理围栏</string>

    <string name="polygonGeoFence">多边形地理围栏</string>
    <string name="polygonGeoFence_dec">展示多边形地理围栏</string>

    <string name="keywordGeoFence">关键字地理围栏</string>
    <string name="keywordGeoFence_dec">展示关键字地理围栏</string>

    <string name="nearbyGeoFence">周边地理围栏</string>
    <string name="nearbyGeoFence_dec">展示周边地理围栏</string>

    <string name="districtGeoFence">行政区划地理围栏</string>
    <string name="districtGeoFence_dec">展示行政区划地理围栏</string>

    <string name="multipleGeoFence">综合展示</string>
    <string name="multipleGeoFence_dec">综合展示地理围栏的功能</string>


    <string name="oldGeoFence">旧版地理围栏</string>
    <string name="oldGeoFence_dec">旧版地理围栏，不建议使用</string>


    <string name="title_assistantLocation">H5辅助定位</string>
    <string name="assistantLocation">H5辅助定位</string>
    <string name="assistantLocation_dec">展示H5辅助定位功能</string>

    <string name="title_tools">地图计算工具</string>
    <string name="tools">地图计算工具</string>
    <string name="tools_dec">坐标转换等功能演示</string>

    <string name="title_lastLocation">获取最后一次位置</string>
    <string name="lastLocation">获取最后一次位置</string>
    <string name="lastLocation_dec">获取最后一次定位的位置，此位置是一个历史位置</string>


    <string name="title_alarmCPU">定时唤起CPU</string>
    <string name="alarmCPU">定时唤起cpu</string>
    <string name="alarmCPU_dec">通过一个闹钟程序后台定时唤起cpu</string>

    <string name="title_errorCode">错误码说明</string>
    <string name="errorCode">错误码说明</string>
    <string name="errorCode_dec">错误码说明以及对应的解决方法</string>

    <string name="defaultInteval">2000</string>
    <string name="defaultHttpTimeout">30000</string>

    <string name="battery_saving">低功耗模式</string>
    <string name="device_sensors">仅设备模式</string>
    <string name="hight_accuracy">高精度模式</string>
    <string name="interval">定位周期(ms)</string>
    <string name="httpTimeout">网络超时(ms)</string>
    <string name="location_once">单次定位</string>
    <string name="needAddress">逆地理编码</string>
    <string name="cacheAble">开启缓存</string>
    <string name="onceLastest">提高首次定位精度</string>
    <string name="gpsFirst">GPS优先</string>
    <string name="useSensor">使用传感器</string>
    <string name="wifiScan">开启wifi扫描</string>

    <string name="alarmInterval">唤醒周期(s)</string>

    <string name="startLocation">开始定位</string>
    <string name="stopLocation">停止定位</string>

    <string name="fenceRadius">围栏半径</string>
    <string name="meter">米</string>
    <string name="activatesAction">触发条件</string>
    <string name="alertIn">进入</string>
    <string name="alertOut">离开</string>
    <string name="alertStated">停留</string>
    <string name="addFence">添加围栏</string>
    <string name="removeFence">移除围栏</string>

    <string name="hideOption">隐藏设置</string>
    <string name="showOption">显示设置</string>

    <string name="showList">显示列表</string>
    <string name="hideList">隐藏列表</string>

    <string name="fence_round">圆形围栏</string>
    <string name="fence_polygon">多边形</string>
    <string name="fence_keyword">关键字围栏</string>
    <string name="fence_nearby">周边围栏</string>
    <string name="fence_district">行政区划围栏</string>

    <string name="getLastLocation">获取最后位置</string>

    <string name="startAssistantLocation">启动H5辅助定位</string>
    <string name="stopAssistantLocation">停止H5辅助定位</string>
    <string name="urlLocation">浏览器定位</string>
    <string name="assistantLocationInfo">辅助定位已经启动，请点击模拟浏览器请求或者在浏览器中输入http://127.0.0.1:43689/进行测试</string>

    <string name="coordinateConvert">坐标转换</string>
    <string name="checkIsChina">位置区域判断</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>





	<string name="errorCodeInfo">
	    0	定位成功。	可以在定位回调里判断定位返回成功后再进行业务逻辑运算\n
	    1	一些重要参数为空，如context；	请对定位传递的参数进行非空判断\n
	    2	定位失败，由于仅扫描到单个wifi，且没有基站信息。	请重新尝试\n
	    3	获取到的请求参数为空，可能获取过程中出现异常。	请对所连接网络进行全面检查，请求可能被篡改\n
	    4	请求服务器过程中的异常，多为网络情况差，链路不通导致	请检查设备网络是否通畅\n
	    5	返回的XML格式错误，解析失败。	请稍后再试\n
	    6	定位服务返回定位失败。	请将errorDetail（通过getLocationDetail()方法获取）信息通过工单系统反馈给我们\n
	    7	KEY鉴权失败。	请仔细检查key绑定的sha1值与apk签名sha1值是否对应，或通过高频问题查找相关解决办法\n
	    8	Android exception常规错误	请将errordetail（通过getLocationDetail()方法获取）信息通过工单系统反馈给我们\n
	    9	定位初始化时出现异常。	请重新启动定位\n
	    10	定位客户端启动失败。	请检查AndroidManifest.xml文件是否配置了APSService定位服务\n
	    11	定位时的基站信息错误。	请检查是否安装SIM卡，设备很有可能连入了伪基站网络\n
	    12	缺少定位权限。	请在设备的设置中开启app的定位权限\n
	</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_signUp">注册</string>
    <string name="action_edit_commit">完成</string>
    <string name="action_edit">编辑</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">共享车位</string>
    <string name="title_activity_wallet">我的钱包</string>
    <string name="title_activity_msg">消息页面</string>
    <string name="title_activity_car">车辆管理</string>
    <string name="title_activity_park">车位管理</string>
    <string name="title_activity_manager">设置页面</string>
    <string name="title_activity_user">用户信息</string>
    <string name="title_activity_collection">收藏夹</string>
    <string name="title_activity_detail">详细信息</string>
    <string name="title_activity_idc_detail">身份证详情</string>
    <string name="title_activity_dc_detail">驾驶证详情</string>

    <string name="title_activity_pick_img">选择图片</string>
    <string name="title_activity_preview_img">图片预览</string>
    <string name="title_activity_park_detail">车位详情</string>
    <string name="title_activity_park_edit">车位编辑</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_title">搜索 </string>
    <string name="search_hint">输入小区，地址，大型建筑</string>
    <string name="settings_description">settings_description</string>


    <!-- nav -->
    <string name="nav_menu_park">车位管理</string>
    <string name="nav_menu_car">车辆管理</string>
    <string name="nav_menu_collection">收藏夹</string>
    <string name="nav_menu_wallet">我的钱包</string>
    <string name="nav_menu_msg">消息盒子</string>
    <string name="nav_menu_manager">设置</string>

    <string name="default_identify_sign">这个人很懒，什么都没说</string>
    <string name="default_nick">新人宝宝</string>
    <string name="txt_please_login">请登录</string>
    <string name="txt_identify_sign">个性签名</string>

    <string name="default_title">无标题</string>


    <string name="label_cancel">取消</string>
    <string name="label_ok">确定</string>
    <string name="permission_title_rationale">权限需求</string>
    <string name="permission_read_storage_rationale">选择图片时需要读取权限</string>
    <string name="permission_write_storage_rationale">拍照时需要存储权限</string>
    <string name="txt_sign_up">注册</string>
    <string name="title_activity_sign_up">注册</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_park_name">车位名</string>
    <string name="prompt_park_description">车位描述</string>
    <string name="prompt_car_name">车辆名</string>
    <string name="prompt_car_licence_plate">车牌号</string>

    <string name="prompt_car_brand">品牌</string>
    <string name="prompt_car_version">型号</string>




    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_username">用户名无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_add_car">新增车辆</string>
    <string name="title_activity_add_park">新增车位</string>
    <string name="txt_login">登录</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="btn_logout">退出账号</string>

    <string name="txt_park_img_1">车位照片1</string>
    <string name="txt_park_img_2">车位照片2</string>
    <string name="txt_car_img_front">车头照片</string>
    <string name="txt_car_img_tail">车尾照片</string>
    <string name="txt_car_img_left">车左身照片</string>
    <string name="txt_car_img_right">车右身照片</string>
    <string name="txt_car_year_check">年审照片</string>
    <string name="txt_car_driver_licence_1">行驶证照片1</string>
    <string name="txt_car_driver_licence_2">行驶证照片2</string>

</resources>